# cpp-test-project-template

./: README.md
catch2-sample/: .gitignore  CMakeLists.txt
catch2-sample/lib/catch2/: CMakeLists.txt
catch2-sample/src/: sample.cpp
catch2-sample/test/: CMakeLists.txt  Forumula_test.cpp
gtest-sample/: .clang-format  CMakeLists.txt  README.md
gtest-sample/include/sample/: Formula.h
gtest-sample/src/: CMakeLists.txt  Currency.cpp  Currency.h  Filesystem.cpp  Filesystem.h  Formula.cpp  sample.cpp
gtest-sample/test/: CMakeLists.txt  Currency_test.cpp  Filesystem_test.cpp  Forumula_test.cpp  hello.cpp  main.cpp
